--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,4 +18,7 @@ import penguins from "../assets/penguins.json";
       ],
     }}
   />
+  <button class="rounded bg-blue-500 text-white px-4 py-2 "><a href="/species/Adelie">Voir les penguins Adelie</a></button>
+  <button class="rounded bg-yellow-500 text-white px-4 py-2 "><a href="/species/Gentoo">Voir les penguins Gentoo</a></button>
+  <button class="rounded bg-orange-500 text-white px-4 py-2 "><a href="/species/Chinstrap">Voir les penguins Chinstrap</a></button>
 </Layout>
