--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,14 @@ import penguins from "../assets/penguins.json";
 ---
 
 <Layout>
-  <h1 class="text-2xl">Test Astro et Plot (Observablehq)</h1>
+  <h1 class="text-2xl mb-6">Test Astro et Plot (Observablehq)</h1>
+  
+  <div class="my-6 space-y-4">
+    <a href="/species/Adelie" class="rounded bg-blue-500 text-white px-4 py-2 inline-block">Voir les penguins Adelie</a>
+    <a href="/species/Gentoo" class="rounded bg-yellow-500 text-white px-4 py-2 inline-block">Voir les penguins Gentoo</a>
+    <a href="/species/Chinstrap" class="rounded bg-orange-500 text-white px-4 py-2 inline-block">Voir les penguins Chinstrap</a>
+  </div>
+  
   <PlotFigure
     options={{
       marks: [
@@ -18,7 +25,5 @@ import penguins from "../assets/penguins.json";
       ],
     }}
   />
-  <button class="rounded bg-blue-500 text-white px-4 py-2 "><a href="/species/Adelie">Voir les penguins Adelie</a></button>
-  <button class="rounded bg-yellow-500 text-white px-4 py-2 "><a href="/species/Gentoo">Voir les penguins Gentoo</a></button>
-  <button class="rounded bg-orange-500 text-white px-4 py-2 "><a href="/species/Chinstrap">Voir les penguins Chinstrap</a></button>
+
 </Layout>
