--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import penguins from "../assets/penguins.json";
     <a href="/species/Adelie" class="rounded bg-blue-500 text-white px-4 py-2 inline-block">Voir les penguins Adelie</a>
     <a href="/species/Gentoo" class="rounded bg-yellow-500 text-white px-4 py-2 inline-block">Voir les penguins Gentoo</a>
     <a href="/species/Chinstrap" class="rounded bg-orange-500 text-white px-4 py-2 inline-block">Voir les penguins Chinstrap</a>
+    <a href="/test-iframe" class="rounded bg-purple-500 text-white px-4 py-2 inline-block">Navigation avec iframe</a>
   </div>
   
   <PlotFigure
