--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import penguins from "../assets/penguins.json";
     <a href="/species/Gentoo" class="rounded bg-yellow-500 text-white px-4 py-2 inline-block">Voir les penguins Gentoo</a>
     <a href="/species/Chinstrap" class="rounded bg-orange-500 text-white px-4 py-2 inline-block">Voir les penguins Chinstrap</a>
     <a href="/test-iframe" class="rounded bg-purple-500 text-white px-4 py-2 inline-block">Navigation avec iframe</a>
+    <a href="/slider" class="rounded bg-green-500 text-white px-4 py-2 inline-block">Slider avec ancres</a>
   </div>
   
   <PlotFigure
